<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="label">cat</string>
    <string name="description">all maps offline and track writer</string>
    <string name="serviceDescription">track writer</string>

    <string name="distanceKm">%1$.1f km</string>
    <string name="zPlus">increase zoom</string>
    <string name="zMinus">decrease zoom</string>
    <string name="exit">exit</string>
    <string name="satellites">satellites</string>
    <string name="selectTrack">select track</string>
    <string name="selectMap">select map</string>
    <string name="center">center map</string>
    <string name="selection">%1$d\u00B0 %2$.1f km</string>
    <string name="maps">maps</string>

    <string name="tracks">tracks</string>

    <string name="locationText">longitude %1$f\u00B0\nlatitude %2$f\u00B0\naltitude %3$d m\naccuracy %4$d m\nspeed %5$d
        km/h
    </string>
    <string name="satellitesText">available %1$d, used %2$d</string>
</resources>